[package]
name = "nican"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Nican driver."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/nican"

[lib]
crate-type = ["lib", "cdylib"]
name = "nican_rs"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
rsutil = { workspace = true, features = ["log"] }
rs-can = { workspace = true }
winapi = { version = "0.3", features = ["errhandlingapi", "libloaderapi", "winnt", "minwindef"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

#[build-dependencies]
#bindgen = "0.71"
