[package]
name = "nican"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Nican driver."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/nican"

[lib]
crate-type = ["lib", "cdylib"]
name = "nican_rs"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
rsutil = { workspace = true, features = ["log"] }
rs-can = { workspace = true }
windows = { version = "0.61", features = ["Win32_System_LibraryLoader"] }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

#[build-dependencies]
#bindgen = "0.71"
