[package]
name = "rs-can"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Nican driver."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/rs-can"
keywords = [
    "can",
    "driver"
]

[dependencies]
log = { workspace = true }
bitflags = { workspace = true }
derive-getters = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[features]
async = []
