[package]
name = "socketcan-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SocketCAN driver with UDS protocol."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/socketcan"

keywords = [
    "SocketCAN",
    "UDS"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
log = { workspace = true }
libc = "0.2"
nix = { version="0.29", features = ["poll", "process", "net"] }
rs-can = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
