[package]
name = "socketcan-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SocketCAN driver with UDS protocol."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/socketcan"

keywords = [
    "SocketCAN",
    "UDS"
]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
libc = "0.2"
log = { workspace = true }
nix = { version="0.30", features = ["poll", "process", "net"] }
rs-can = { workspace = true }
rsutil = { workspace = true, features = ["log"] }

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
