[package]
name = "zlgcan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Cross-platform ZLGCAN driver."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/zlgcan"
exclude = ["library/*"]

[lib]
crate-type = ["lib", "cdylib"]
name = "zlgcan_rs"

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
dotenvy = { workspace = true }
dlopen2 = { workspace = true }
rs-can = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
