[package]
name = "zlgcan"
version = "0.2.7"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Cross-platform ZLGCAN driver."
homepage = "https://github.com/jesses2025smith/rust-can/tree/master/zlgcan"
exclude = ["library/*"]

[lib]
crate-type = ["lib", "cdylib"]
name = "zlgcan_rs"

[dependencies]
dlopen2 = { workspace = true }
log = { workspace = true }
rs-can = { workspace = true }
rsutil = { workspace = true, features = ["log"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
